# ai-rag-agent

./: .dockerignore  .env.example  .gitignore  Chat logs realisticka, vagni, nerealisticka varianta.txt  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  verify_setup.py
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  chain.py  prompts.py  tools.py
app/analytics/: __init__.py  conversation_logger.py  metrics.py  prometheus.py  property_tracker.py  tracker.py
app/calendar/: __init__.py  google_calendar.py
app/data/: __init__.py  loader.py  properties.json
app/integrations/: __init__.py  crm.py  email.py
app/memory/: __init__.py  chat_memory.py
app/models/: __init__.py  broker.py  conversation.py  lead.py  property.py
app/output/: __init__.py  broker_summary.py
app/pages/: admin.py
app/persistence/: __init__.py  database.py  repositories.py
app/rag/: __init__.py  embeddings.py  hybrid_search.py  query_expansion.py  reranker.py  retriever.py  vectorstore.py
app/scoring/: __init__.py  lead_scorer.py
app/ui/: __init__.py  components.py
app/utils/: __init__.py  logging.py  rate_limiter.py  regions.py  retry.py  validation.py
docs/: compliance_analysis.md  knowledge_base_diagram.md  knowledge_base_diagram_cz.md
scripts/: init_database.py
tests/: conftest.py  test_integration.py  test_models.py  test_scenarios.py  test_scoring.py  test_utils.py
